test/errors/types3.input.asm
* = $801

!let arra = [0,1,2]
!let arrb = [3,4,5]
!let v = arra + arrb  ; error: can't add arrays together

    lda #0